client: cleanup jvm args, cleanup logging